@@ -351,8 +351,8 @@ local _parser = spc * P{
 	VALUE_CHAR = Cc("num") * P("'") * P(_capture_char_literal) * spc,
 	
 	VALUE_REF = Cc("ref") * Ct(
-		name_nospc * (P("[") * V("EXPR") * P("]"))^-1 *
-		(P(".") * name_nospc * (P("[") * V("EXPR") * P("]"))^-1)^0
+		name_nospc * (P("[") * spc * V("EXPR") * P("]"))^-1 *
+		(P(".") * name_nospc * (P("[") * spc * V("EXPR") * P("]"))^-1)^0
 		) * spc,
 	
 	VALUE = P(_capture_position) * (V("VALUE_NUM") + V("VALUE_STR") + V("VALUE_CHAR") + V("VALUE_REF")),
